# simulation-game

./: .gitignore  CONTRIBUTING.md  INSTALL_AND_USAGE.md  Makefile  README.md  azure.yaml  docker-compose.yml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
infra/: README.md  abbreviations.json  main.bicep  main.parameters.json
infra/modules/: container-app.bicep  container-apps-env.bicep  container-registry.bicep  keyvault.bicep  monitoring.bicep
philoagents-api/: .env.example  Dockerfile  Makefile  README.md  langgraph.json  pyproject.toml
philoagents-api/data/: evaluation_dataset.json  extraction_metadata.json
philoagents-api/src/philoagents/: config.py
philoagents-api/src/philoagents/application/: long_term_memory.py  scenario_loader.py  scoring_service.py
philoagents-api/src/philoagents/application/conversation_service/: generate_response.py  reset_conversation.py
philoagents-api/src/philoagents/application/conversation_service/workflow/: __init__.py  chains.py  edges.py  graph.py  nodes.py  state.py  tools.py
philoagents-api/src/philoagents/application/data/: __init__.py  extract.py
philoagents-api/src/philoagents/application/evaluation/: evaluate.py  generate_dataset.py  upload_dataset.py
philoagents-api/src/philoagents/application/game_loop_service/: api.py  service.py
philoagents-api/src/philoagents/application/game_loop_service/workflow/: __init__.py  chains.py  graph.py  nodes.py  state.py
philoagents-api/src/philoagents/application/rag/: embeddings.py  retrievers.py
philoagents-api/src/philoagents/domain/: __init__.py  action.py  character.py  character_factory.py  evaluation.py  exceptions.py  game_state.py  philosopher_factory.py  prompts.py  resources.py
philoagents-api/src/philoagents/infrastructure/: api.py  dependencies.py  opik_utils.py
philoagents-api/src/philoagents/infrastructure/mongo/: __init__.py  client.py  game_state_repository.py  indexes.py
philoagents-api/src/philoagents/scenarios/a_clash_of_titans_216bce/: characters.json  initial_state.json  manifest.json  rag_sources.json
philoagents-api/tests/: conftest.py  test_config.py  test_game_loop_service.py  test_judge_settlement.py  test_scoring_service.py
philoagents-api/tools/: call_agent.py  create_long_term_memory.py  generate_evaluation_dataset.py
philoagents-ui/: Dockerfile  README.md  index.html  package-lock.json  package.json
philoagents-ui/public/: style.css
philoagents-ui/public/assets/characters/alexander_i/: atlas.json
philoagents-ui/public/assets/tilemaps/: philoagents-town.json
philoagents-ui/src/: config.js  main.js
philoagents-ui/src/classes/: AudioManager.js  BaseModal.js  ButtonFactory.js  Character.js  DialogueBox.js  DialogueManager.js  GameManager.js
philoagents-ui/src/configs/: CharacterConfig.js  Theme.js
philoagents-ui/src/scenes/: ActionModal.js  CharacterSelect.js  CrisisModal.js  EndGameModal.js  Game.js  Hud.js  InstructionsModal.js  IntelModal.js  MainMenu.js  PauseMenu.js  Preloader.js  ScoreboardScene.js
philoagents-ui/src/services/: ApiService.js  WebSocketApiService.js
philoagents-ui/tests/: GameManager.test.js  WebSocketApiService.test.js  config.test.js  setup.js
philoagents-ui/webpack/: config.js  config.prod.js
(+7 files in other folders)
