[project]
name = "philoagents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.118.0",
    "langchain-core>=0.3.78",
    "langchain-groq>=0.3.8",
    "langchain-mongodb>=0.7.0",
    "langgraph>=0.6.8",
    "langgraph-checkpoint-mongodb>=0.2.1",
    "opik>=1.8.65",
    "pre-commit>=4.3.0",
    "pydantic-settings>=2.11.0",
    "pymongo>=4.15.2",
    "langchain-community>=0.3.30",
    "loguru>=0.7.3",
    "langchain-huggingface>=0.3.1",
    "wikipedia>=1.4.0",
    "ipykernel>=6.30.1",
    "pydantic>=2.11.10",
    "datasketch>=1.6.5",
    "sentence-transformers>=5.1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.13.3",
]

[tool.pip]
extra-index-url = "https://download.pytorch.org/whl/cpu/torch_stable.html"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/philoagents"]

[tool.ruff]
target-version = "py312"
