[project]
name = "philoagents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "langchain-core>=1.2.7",
    "langchain-groq>=1.1.1",
    "langchain-mongodb>=0.11.0",
    "langgraph>=1.0.6",
    "langgraph-checkpoint-mongodb>=0.3.0",
    "opik>=1.9.92",
    "pydantic-settings>=2.12.0",
    "pymongo>=4.15.5",
    "langchain-community>=0.4.1",
    "loguru>=0.7.3",
    "langchain-huggingface>=1.2.0",
    "wikipedia>=1.4.0",
    "ipykernel>=7.1.0",
    "pydantic>=2.12.5",
    "datasketch>=1.9.0",
    "sentence-transformers>=5.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.13",
    "pre-commit>=4.5.1",
]

[tool.pip]
extra-index-url = "https://download.pytorch.org/whl/cpu/torch_stable.html"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/philoagents"]

[tool.ruff]
target-version = "py312"
