[project]
name = "philoagents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "langchain-core>=1.4.7",
    "langchain-groq>=1.1.3",
    "langchain-mongodb>=0.11.0",
    "langgraph>=1.2.5",
    "langgraph-checkpoint-mongodb>=0.4.0",
    "opik>=2.0.62",
    "pydantic-settings>=2.14.1",
    "pymongo>=4.16.0",
    "langchain-community>=0.4.2",
    "loguru>=0.7.3",
    "langchain-huggingface>=1.2.2",
    "wikipedia>=1.4.0",
    "pydantic>=2.13.4",
    "datasketch>=1.10.0",
    "sentence-transformers>=5.5.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "ruff>=0.15.17",
    "pre-commit>=4.6.0",
]

[tool.pip]
extra-index-url = "https://download.pytorch.org/whl/cpu/torch_stable.html"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/philoagents"]

[tool.ruff]
target-version = "py312"
